--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 :root {
   --background-color: #adb5bd;
-  --border-color: #343a40;
+  --main-color: #343a40;
   --headline-color: #7bf1a8;
+  --brand-color: #e5383b;
 }
 
 .App {
@@ -12,6 +13,10 @@
 
 .App * {
   box-sizing: border-box;
+}
+
+.event-link {
+  text-decoration: underline;
 }
 
 ul {
@@ -40,7 +45,7 @@ p {
 .meet-logo {
   font-weight: 800;
   text-decoration: none;
-  color: var(--border-color);
+  color: var(--main-color);
   font-size: 50px;
   font-weight: 900;
   transition: 0.5s;
@@ -49,7 +54,7 @@ p {
 .meet-logo:hover{
   color: white;
   transform: scale(1.2);
-  text-shadow: 10px 10px 2px var(--border-color);
+  text-shadow: 10px 10px 2px var(--main-color);
 }
 
 .search-wrapper {
@@ -60,7 +65,7 @@ p {
 }
 
 ::placeholder {
-  color: var(--border-color);
+  color: var(--main-color);
 }
 
 input[type="text"],
@@ -68,14 +73,14 @@ input[type="number"] {
   padding: 8px 6px 8px 10px;
   border-radius: 4px;
   outline: none;
-  border: 0.4rem solid var(--border-color);
+  border: 0.4rem solid var(--main-color);
   font-size: 14px;
   line-height: 20px;
   align-self: center;
   height: 38px;
   margin: 1em;
-  box-shadow: 10px 10px 2px var(--border-color);
-  color: var(--border-color);
+  box-shadow: 10px 10px 2px var(--main-color);
+  color: var(--main-color);
 }
 
 .citysearch-label {
@@ -116,7 +121,7 @@ input[type="number"] {
   padding: 8px 6px 8px 10px;
   background-color: white;
   cursor: default;
-  border: 0.4rem solid var(--border-color);
+  border: 0.4rem solid var(--main-color);
   
 }
 
@@ -146,20 +151,25 @@ input[type="number"] {
 }
 
 .event-card {
-  box-shadow: 10px 10px 2px var(--border-color);
-  border: 0.4rem solid var(--border-color);
+  box-shadow: 10px 10px 2px var(--main-color);
+  border: 0.4rem solid var(--main-color);
 }
 
 .details-button {
   color: white;
-  background-color: var(--border-color);
+  background-color: var(--main-color);
   border: none;
+  margin-bottom: 20px;
 }
 
 .details-button:hover {
-  color: var(--border-color);
+  color: var(--main-color);
   background-color: white;
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--main-color);
+}
+
+.details-button:focus {
+  box-shadow: none;
 }
 
 .name {
@@ -202,14 +212,15 @@ input[type="number"] {
 
 .data-vis-head {
   margin: 10px 10px;
+  color: var(--main-color);
 }
 
 .data-vis {
   margin: 3rem 5vw;
   background-color: white;
   border-radius: 4px;
-  border: 0.4rem solid var(--border-color);
-  box-shadow: 10px 10px 2px var(--border-color);
+  border: 0.4rem solid var(--main-color);
+  box-shadow: 10px 10px 2px var(--main-color);
 
 }
 
@@ -230,63 +241,6 @@ input[type="number"] {
   /* margin-left: 9em; */
 }
 
-.login-button {
-  color: #494949;
-  text-transform: uppercase;
-  text-decoration: none;
-  background: #ffffff;
-  padding: 20px;
-  border: 4px solid #494949;
-  display: inline-block;
-  transition: all 0.4s ease 0s;
-  min-width: 10rem;
-  margin: 1rem;
-}
-
-.google-btn {
-  width: 184px;
-  height: 42px;
-  margin: 1rem;
-  background-color: #4285f4;
-  border-radius: 2px;
-  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
-}
-
-.google-btn:hover {
-  box-shadow: 0 0 6px #4285f4;
-}
-
-.google-btn:active {
-  background: #1669f2;
-}
-
-.google-icon-wrapper {
-  position: absolute;
-  margin-top: 1px;
-  margin-left: 1px;
-  width: 40px;
-  height: 40px;
-  border-radius: 2px;
-  background-color: #fff;
-}
-
-.google-icon {
-  position: absolute;
-  margin-top: 11px;
-  margin-left: -8px;
-  width: 18px;
-  height: 18px;
-}
-
-.btn-text {
-  float: right;
-  margin: 11px 11px 0 0;
-  color: #fff;
-  font-size: 14px;
-  letter-spacing: 0.2px;
-  font-family: "Roboto";
-}
-
 
 
 @media only screen and (min-width: 992px) {
@@ -301,35 +255,8 @@ input[type="number"] {
   }
 }
 
-@media only screen and (min-width: 450px) {
-  .meet-logo-wrapper {
-    text-align: center;
-    padding-top: 20px;
-    position: fixed;
-  }
-  .meet-logo {
-    font-weight: 800;
-    text-decoration: none;
-    color: var(--border-color);
-    font-size: 50px;
-    font-weight: 900;
-    transition: 0.5s;
-  }
-}
-
 button {
   margin: 1.2em 0 0;
-}
-
-.event-htmlLink {
-color: #F8DB5C;
-font-weight: 500;
-text-decoration: underline;
-}
-
-.event-htmlLink:hover {
-  color: #fff;
-  text-decoration: underline;
 }
 
 .welcome-card {
@@ -340,8 +267,8 @@ text-decoration: underline;
   }
 
 .navbar {
-  border: 0.4rem solid var(--border-color);
-  box-shadow: 10px 10px 2px var(--border-color);
+  background-color: white;
+  border: 0.4rem solid var(--main-color);
 }
 
 .navbar-brand {
@@ -350,18 +277,20 @@ text-decoration: underline;
 }
 
 .navbar-light .navbar-brand {
-    color: var(--border-color);
-    font-weight: 700;
-    font-size: 50px;
-    background-color: transparent;
-    transition: transform 0.5s;
+  font-weight: 800;
+  text-decoration: none;
+  color: var(--main-color);
+  font-size: 50px;
+  font-weight: 900;
+  transition: 0.5s;
 }
 
 .navbar-light .navbar-brand:hover {
-  color: white;
+  color: var(--main-color);
   transform: scale(1.2);
+  text-shadow: 10px 10px 2px var(--brand-color);
 }
 
 .navbar-light .navbar-brand:focus {
-  color: var(--border-color);
+  color: var(--main-color);
 }
