--- a/src/WelcomeScreen.css
+++ b/src/WelcomeScreen.css
@@ -1,10 +1,38 @@
+:root {
+  --background-color: #adb5bd;
+  --main-color: #343a40;
+  --headline-color: #7bf1a8;
+  --brand-color: #e5383b;
+}
+
 .WelcomeScreen {
     position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
-    background: white;
+    background: var(--background-color);
   }
+
+.position-wrapper {
+  margin: auto;
+  width: 50%;
+}
+
+.welcome-screen-card {
+
+  margin-top: 250px;
+  height: 280px;
+  box-shadow: 10px 10px 2px var(--main-color);
+  border: 0.4rem solid var(--main-color);
+}
+
+.card-text {
+  padding-top: 15px;
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--main-color);
+}
+
   .login-button {
     color: #494949;
     text-transform: uppercase;
@@ -20,16 +48,16 @@
     width: 184px;
     height: 42px;
     margin: 1rem;
-    background-color: #4285f4;
+    background-color: var(--main-color);
     border-radius: 2px;
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
   }
   .google-btn:hover {
-    box-shadow: 0 0 6px #4285f4;
+    box-shadow: 0 0 6px var(--main-color);
   }
   
   .google-btn:active {
-    background: #1669f2;
+    background: var(--main-color);
   }
   .google-icon-wrapper {
     position: absolute;
@@ -53,8 +81,15 @@
     font-size: 14px;
     letter-spacing: 0.2px;
     font-family: "Roboto";
-    background-color: #4285f4;
+    background-color: var(--main-color);
     width: 80%;
     height: 100%;
     text-align: center;
+    border: none;
+    padding-left: 17px;
+  }
+
+  a {
+    text-decoration: none;
+    color: var(--main-color);
   }
